--- a/code/css复习/1.html
+++ b/code/css复习/1.html
@@ -180,5 +180,6 @@
         console.log(this)
       }, 1000)
     }
+    // git commitlint https://www.quanzhan.co/archives/168
   </script>
 </html>
